# Voice-Clone-Studio

./: .dockerignore  .gitignore  Dockerfile  LINUX_INSTALL.md  README.md  docker-compose.yaml  emotions.json  launch.bat  launch.sh  main.py  prompts.json  pyproject.toml  requirements-linux.txt  requirements-windows.txt  requirements.txt  runMe.sh  setup-linux.sh  setup-mac.sh  setup-windows.bat  setup.bat  voice_clone_studio.py  voice_clone_studio_minimal.py
.github/: copilot-instructions.md
docs/: troubleshooting.md  updates.md
modules/: README.md  __init__.py  update_helper.py  vendor_manifest.json
modules/chatterbox/: mtl_tts.py  tts.py  vc.py
modules/core_components/: __init__.py  audio_utils.py  confirmation_modal.py  constants.py  emotion_manager.py  help_page.py  input_modal.py  library_processing.py  prompt_hub.py  tenant_context.py  tenant_storage.py
modules/core_components/ai_models/: __init__.py  asr_manager.py  foley_manager.py  model_utils.py  qwen_stream_patch.py  tts_manager.py
modules/core_components/runtime/: __init__.py  memory_governor.py  resource_monitor.py
modules/core_components/tests/: test_config_init.py  test_emotion_system.py
modules/core_components/tools/: __init__.py  conversation.py  generated_output_save.py  library_manager.py  live_audio_streaming.py  live_stream_policy.py  output_audio_pipeline.py  output_history.py  prep_audio.py  prep_samples.py  prompt_manager.py  settings.py  sound_effects.py  train_model.py  voice_changer.py  voice_clone.py  voice_design.py  voice_presets.py
modules/core_components/ui_components/: __init__.py  input_modal.css  input_modal.html  input_modal.js  modals.py  prompt_assistant.py  theme.json
modules/deepfilternet/: deepfilternet_torchaudio_patch.py
modules/mmaudio/: eval_onsets.py
modules/mmaudio/mmaudio/ext/: mel_converter.py
modules/mmaudio/mmaudio/ext/autoencoder/: autoencoder.py
modules/mmaudio/mmaudio/ext/bigvgan/: models.py  utils.py
modules/mmaudio/mmaudio/ext/bigvgan_v2/: bigvgan.py  utils.py
modules/mmaudio/mmaudio/model/utils/: features_utils.py
modules/qwen_finetune/: dataset.py  prepare_data.py  sft_12hz.py
modules/ui_components/: __init__.py  confirmation_modal.py
modules/vibevoice_tts/processor/: vibevoice_processor.py
scripts/: migrate_to_tenant_storage.py
tests/: integration_test_denoiser.py  test_asr_manager_memory_safety.py  test_config_defaults_expert_params.py  test_generated_output_save.py  test_generation_stream_routing.py  test_library_processing.py  test_live_audio_streaming.py  test_memory_governor.py  test_output_audio_pipeline.py  test_prompt_hub_existing_context.py  test_qwen_stream_patch.py  test_resource_monitor.py  test_tenant_context.py  test_tenant_integration.py  test_tenant_storage.py  test_tts_manager_chatterbox_expert_forwarding.py  test_tts_manager_prompt_cache.py  test_tts_manager_stream_support.py
