[project]
name = "voice-clone-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "av>=14.0.1",
    "bitsandbytes>=0.49.1",
    "colorlog>=6.10.1",
    "conformer>=0.3.2",
    "deepfilterlib>=0.5.6",
    "deepfilternet>=0.5.6",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
    "gradio>=6.5.1",
    "gradio-filelister",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.2",
    "librosa>=0.11.0",
    "linacodec",
    "markdown>=3.10.2",
    "maturin>=1.11.5",
    "numpy==1.26.4",
    "nvidia-cuda-nvrtc>=13.0.88",
    "nvidia-cuda-runtime>=13.0.96",
    "nvidia-cufile>=1.15.1.6",
    "nvidia-cusolver>=12.0.4.66",
    "nvidia-cusparselt-cu13>=0.8.0",
    "nvidia-nvjitlink>=13.0.88",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.24.1",
    "open-clip-torch>=3.2.0",
    "openai-whisper>=20250625",
    "piper-phonemize-fix>=1.2.1",
    "psutil>=7.2.2",
    "puccinialin>=0.1.8",
    "pybind11>=3.0.1",
    "pytest>=9.0.2",
    "qwen-asr",
    "qwen-tts>=0.1.1",
    "s3tokenizer>=0.3.0",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.25.0",
    "zipvoice",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv.extra-build-dependencies]
# deepfilterlib = [{ requirement = ["puccinialin", "maturin"], match-runtime = true }]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.sources]
sageattention = { git = "https://github.com/thu-ml/SageAttention.git" }
fairseq = { git = "https://github.com/One-sixth/fairseq.git" }
linacodec = { git = "https://github.com/P2Enjoy/LinaCodec.git" }
qwen-asr = { git = "https://github.com/P2Enjoy/Qwen3-ASR.git" }
qwen-tts = { git = "https://github.com/P2Enjoy/Qwen3-TTS.git" }
gradio-filelister = { path = "wheel/gradio_filelister-0.4.0-py3-none-any.whl" }
zipvoice = { git = "https://github.com/P2Enjoy/LuxTTS.git" }

[tool.uv]
index-strategy = "unsafe-best-match"
preview = true
